--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="container">
-      <div class="brand-log" style="text-align: center; margin: 15px 0;">
+      <div class="brand-logo" style="text-align: center; padding: 15px 0;">
           <a href="#" style=" display: inline-block; width: 30%;">
             <img src="assets/images/logo-01.svg" alt="TREARE" class="logo">
           </a>
