--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="cache-control" content="no-cache, must-revalidate" />
   <meta http-equiv="pragma" content="no-cache" />
+  <!-- <link rel="shortcut icon" type="image/png" href="/favicon.png"/> -->
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 	<title>TREARE</title>
   
 	<link href="assets/css/app.css" rel="stylesheet">
