--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </li>
       </ul>
     </div>
-    <div class="navbar-brand m-auto">
-      <a href="#" class="img-logo">
-        <img src="assets/images/logo-01.png" alt="TREARE" class="mt-2">
+    <div class="m-auto">
+      <a href="#">
+        <img src="assets/images/logo-01.png" alt="TREARE" class="img-logo">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -53,7 +53,7 @@
       </ul>
     </div>
   </nav>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -90,7 +90,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+  </div> -->
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
