--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!-- <link rel="shortcut icon" type="image/png" href="/favicon.png"/> -->
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 	<title>TREARE</title>
-  
-	<link href="assets/css/app.css" rel="stylesheet">
+	<link href="dist/css/main.min.css" rel="stylesheet">
 	<!--[if IE]>
 		<link href="assets/css/ie.css" rel="stylesheet" type="text/css" media="all" />
 	<![endif]-->
@@ -24,10 +23,30 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="dropdown navbar-toggler ml-4" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <div id="sidemenu" class="dropdown navbar-toggler ml-4" data-menu="menu-mobile">
+      <i class="material-icons isActive">menu</i>
+      <i class="material-icons">close</i>
     </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="menu-mobile">
+      <ul class="menu">
+        <li class="menu_title">
+            Desenvolvimento
+        </li>
+        <ul class="menu_itens">
+            <li class="link">Hotsites</li>
+            <li class="link">Sites</li>
+            <li class="link">aplicações</li>
+        </ul>
+        <li class="menu_title">
+            Arte digital
+        </li>
+        <ul class="menu_itens">
+            <li class="link">Impressos</li>
+            <li class="link">Marketing</li>
+        </ul>
+      </ul>
+    </div>
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
@@ -37,12 +56,12 @@
         </li>
       </ul>
     </div>
-    <div class="m-auto">
+    <div class="nav-img m-auto">
       <a href="#">
-        <img src="assets/images/logo-01.png" alt="TREARE" class="img-logo">
+        <img src="dist/images/logo-01.png" alt="TREARE" class="img-logo">
       </a>
     </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="#">O que fazemos?</a>
@@ -53,47 +72,8 @@
       </ul>
     </div>
   </nav>
-  <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/images/background-02.jpeg" alt="First slide" style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Title Legend</h5>
-          <p>this is text caption</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/background-02.jpeg" alt="Second slide" style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Title Legend</h5>
-          <p>this is text caption</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/background-02.jpeg" alt="Third slide" style="height: 300px;">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Title Legend</h5>
-          <p>this is text caption</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="assets/js/app.js"></script>
+  <script src="dist/js/vendors.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 </html>
