--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
     <div class="nav-wrapper center hide-on-small-only">
       <ul id="nav-mobile" class="hide-on-med-and-down">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">O que fazemos?</a></li>
+        <li class="fadeInLeft"><a href="#">Home</a></li>
+        <li class="fadeInLeft"><a href="#">O que fazemos?</a></li>
         <li>
-          <a href="#">
+          <a href="#" class="fadeInDown">
             <img src="dist/images/logo-01.png" alt="TREARE" class="logo">
           </a>
         </li>
-        <li><a href="#">Quem somos?</a></li>
-        <li><a href="#">Contato</a></li>
+        <li class="fadeInRight"><a href="#">Quem somos?</a></li>
+        <li class="fadeInRight"><a href="#">Contato</a></li>
       </ul>
     </div>
     <div>
@@ -47,7 +47,7 @@
             </a>
           </div>
         </li>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">O que fazemos?</a></li>
         <li><a href="#">Quem somos?</a></li>
         <li><a href="#">Contato</a></li>
@@ -56,12 +56,18 @@
   </nav>
 
   <div class="container">
-    <h2 class="card-title">Card Title</h2>
-
+    <div class="heading center">
+      <h4>Soluções em software & Marketing digital</h4>
+      <p>
+        Bitbucket is more than just Git code management. Bitbucket gives teams one place to plan projects, collaborate on code, test and deploy.
+      </p>
+    </div>
+  
     <div class="row">
-      <div class="col s12 m6">
+      <div class="col s12 m6 offset-m3">
         <div class="card">
           <div class="card-content">
+            <span class="card-title center">Card Title</span>
             <p>I am a very simple card. I am good at containing small bits of information.
             I am convenient because I require little markup to use effectively.</p>
           </div>
@@ -69,23 +75,49 @@
       </div>
     </div>
   </div>
+
   <div class="parallax-container">
     <div class="parallax"><img src="dist/images/backgrounds/bg-04.jpg"></div>
   </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="header">Parallax</h2>
-      <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+      <h2 class="header center">O que fazemos?</h2>
+      <p class="grey-text text-darken-3 lighten-3 center">
+        Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.
+      </p>
       
-
       <!-- skills -->
       <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <a class="btn-floating halfway-fab waves-effect waves-light left"><i class="material-icons">dashboard</i></a>
           </div>
           <div class="card-content">
-            <span class="card-title">Card Title</span>
+            <span class="card-title">Dashboard</span>
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <a class="btn-floating halfway-fab waves-effect waves-light center-icon red"><i class="material-icons">desktop_mac</i></a>
+          </div>
+          <div class="card-content">
+            <span class="card-title">Aplicações Web & Mobile</span>
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">trending_up</i></a>
+          </div>
+          <div class="card-content">
+            <span class="card-title">Big Data & Analise</span>
             <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
           </div>
         </div>
@@ -94,11 +126,13 @@
       <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+              <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">trending_up</i></a>
             </div>
             <div class="card-content">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Branding</span>
+              <p>
+                Todo o trabalho realizado com o objetivo de tornar a sua marca mais conhecida, mais desejada, mais positiva na mente e no coração dos seus consumidores.
+              </p>
             </div>
           </div>
         </div>
@@ -106,14 +140,26 @@
         <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">trending_up</i></a>
               </div>
               <div class="card-content">
-                <span class="card-title">Card Title</span>
+                <span class="card-title">Marketing Digital</span>
                 <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
               </div>
             </div>
           </div>
+
+          <div class="col s12 m4">
+              <div class="card">
+                <div class="card-image">
+                  <a class="btn-floating halfway-fab waves-effect waves-light green"><i class="material-icons">trending_up</i></a>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Consultoria digital</span>
+                  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                </div>
+              </div>
+            </div>
       <!-- end skills -->
     </div>
   </div>
@@ -121,6 +167,46 @@
     <div class="parallax"><img src="dist/images/backgrounds/bg-04.jpg"></div>
   </div>
 
+  <div class="section white">
+    <div class="row container">
+      <h3 class="center">Quem somos?</h3>
+      <div class="article col s12 m6">
+        <p>
+          Ajudamos empresas como a sua a manter-se sempre à frente.
+          <br/>
+          Um software deve ser criado com visão de futuro, que sempre evolua e seja duradouro.
+        </p>
+      </div>
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title center">Card Title</span>
+            <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row" style="margin: 0">
+        <div class="col l6 s12">
+          <h5 class="white-text">Footer Content</h5>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Site map</h5>
+          <ul>
+            <li><a href="#" class="grey-text text-lighten-3" >Home</a></li>
+            <li><a href="#" class="grey-text text-lighten-3" >O que fazemos?</a></li>
+            <li><a href="#" class="grey-text text-lighten-3" >Quem somos?</a></li>
+            <li><a href="#" class="grey-text text-lighten-3" >Contato</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   
 
   <!-- <div>
