--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
     <div class="nav-wrapper center hide-on-small-only">
       <ul id="nav-mobile" class="hide-on-med-and-down">
-        <li class="fadeInLeft"><a href="#">Home</a></li>
-        <li class="fadeInLeft"><a href="#">O que fazemos?</a></li>
+        <li><a href="#" class="animated fadeInLeft">Home</a></li>
+        <li><a href="#" class="animated fadeInLeft">O que fazemos?</a></li>
         <li>
-          <a href="#" class="fadeInDown">
+          <a href="#" class="animated fadeInDown">
             <img src="dist/images/logo-01.png" alt="TREARE" class="logo">
           </a>
         </li>
-        <li class="fadeInRight"><a href="#">Quem somos?</a></li>
-        <li class="fadeInRight"><a href="#">Contato</a></li>
+        <li><a href="#" class="animated fadeInRight">Quem somos?</a></li>
+        <li><a href="#" class="animated fadeInRight">Contato</a></li>
       </ul>
     </div>
     <div>
@@ -56,7 +56,7 @@
   </nav>
 
   <div class="container">
-    <div class="heading center">
+    <div class="heading center animated fadeInDown">
       <h4>Soluções em software & Marketing digital</h4>
       <p>
         Bitbucket is more than just Git code management. Bitbucket gives teams one place to plan projects, collaborate on code, test and deploy.
