--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- <link rel="shortcut icon" type="image/png" href="/favicon.png"/> -->
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 	<title>TREARE</title>
-	<link href="dist/css/main.min.css" rel="stylesheet">
+	<link href="dist/css/main.css" rel="stylesheet">
 	<!--[if IE]>
 		<link href="assets/css/ie.css" rel="stylesheet" type="text/css" media="all" />
 	<![endif]-->
