--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <div class="container">
     <div class="heading center animated fadeInDown">
-      <h4>Soluções em software & Marketing digital</h4>
+      <h2>Soluções em software & Marketing digital</h2>
       <p>
         Bitbucket is more than just Git code management. Bitbucket gives teams one place to plan projects, collaborate on code, test and deploy.
       </p>
@@ -65,7 +65,7 @@
   
     <div class="row">
       <div class="col s12 m6 offset-m3">
-        <div class="card">
+        <div class="card hoverable">
           <div class="card-content">
             <span class="card-title center">Card Title</span>
             <p>I am a very simple card. I am good at containing small bits of information.
@@ -188,6 +188,60 @@
       </div>
     </div>
   </div>
+
+<!-- Contato -->
+  <div class="parallax-container">
+    <div class="parallax"><img src="dist/images/backgrounds/bg-04.jpg"></div>
+  </div>
+
+  <div class="section">
+    <div class="row container">
+        <form class="col s6 offset-s3">
+          <div class="card">
+            <div class="card-content">
+              <h3 class="center m-t-0 m-b-3">Entre em contato</h3>
+              <div class="row">
+                <div class="input-field col s6">
+                  <i class="material-icons prefix">account_circle</i>
+                  <input placeholder="Nome completo" id="full_name" type="text" class="validate" required>
+                  <label for="full_name">Nome completo</label>
+                </div>
+                <div class="input-field col s6">
+                  <i class="material-icons prefix">email</i>
+                  <input placeholder="E-mail" id="email" type="text" class="validate" required>
+                  <label for="email">E-mail</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s6">
+                  <i class="material-icons prefix">phone</i>
+                  <input placeholder="Telefone" id="phone" type="tel" class="validate" required>
+                  <label for="phone">Telefone</label>
+                </div>
+                <div class="input-field col s6">
+                  <i class="material-icons prefix">business</i>
+                  <input placeholder="Empresa" id="company" type="text">
+                  <label for="company">Empresa</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">textsms</i>
+                  <textarea id="textarea" class="materialize-textarea"></textarea>
+                  <label for="textarea">Sua menssagem</label>
+                </div>
+                <div class="center col s12">
+                  <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+                    <i class="material-icons right">send</i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+    </div>
+  </div>
+  
 
   <footer class="page-footer">
     <div class="container">
